--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
              margin-bottom: 5px;
          }
 
+         #employment h3 {
+             color: var(--secondary-color);
+             margin-bottom: 5px;
+         }
+
          .project-card h3,
          .publication-card h3 {
              color: var(--secondary-color);
@@ -289,7 +294,7 @@
                 <ul>
                     <li>Generative AI, Agent and Multi-Agent safety and security (threat modeling, countermeasures)</li>
                     <li>Machine learning & deep learning</li>
-                    <li>Privacy-preserving computing platform (federated learning, multi-party secure computation, differential privacy and modern cryptography)</li>
+                    <li>Privacy-enhancing technologies (federated learning, multi-party secure computation, differential privacy and modern cryptography)</li>
                 </ul>
                 <ul>
                     <li>Cloud-native architecture and SRE tooling</li>
@@ -303,35 +308,35 @@
         <div class="content">
             <section id="about" class="section">
                 <h2>About Me</h2>
-                <p>I am a seasoned security professional with extensive experience in the fields of AI security, data privacy, and privacy-preserving computing. Currently, I serve as a TechLead in the Security Research Department at ByteDance, where I lead initiatives in LLM and LLM Agent security, as well as secure machine learning infrastructures.</p>
+                <p>I am a seasoned security professional with extensive experience in the fields of AI security, data privacy, and privacy-preserving computing. Currently, I serve as a technical lead in the Security Research Department at ByteDance, where I lead initiatives in LLM and LLM Agent security, as well as secure machine learning and big data infrastructures.</p>
 
                 <p>Throughout my career, I have led numerous key projects, including the development of security countermeasures for LLM Agent and LLM safety and security, and secure machine learning infrastructures. These projects have been widely applied both within the companies I've worked for and in commercial scenarios, covering industries such as finance, automotive, tourism, and government.</p>
 
-                <p>I hold a Ph.D. in Engineering and Computer Science from The Australian National University where my research focused on acceleration and privacy protection in distributed computing, and a Bachelor's degree in Electronic Engineering from Tsinghua University. I have published over 20 academic papers, with more than 8 as first or corresponding author in top journals/conferences like IEEE/ACM Trans. on Networking and IJCAI, and hold dozons of patents related to large language models, security and privacy, and AI infra.</p>
+                <p>I hold a Ph.D. in Engineering and Computer Science from The Australian National University where my research focused on acceleration and privacy protection in distributed computing, and a Bachelor's degree in Electronic Engineering from Tsinghua University. I have published over 20 academic papers, with representative works in top journals/conferences like IEEE/ACM Trans. on Networking and IJCAI, and hold dozons of patents related to large language models, security and privacy, and AI infra.</p>
             </section>
 
             <section id="education" class="section">
                 <h2>Education</h2>
                 <div class="education-item">
                     <h3>Ph.D. in Engineering and Computer Science</h3>
-                    <p><a href="https://www.anu.edu.au/">The Australian National University</a>, Australia | 2015 - 2019</p>
+                    <p><strong><a href="https://www.anu.edu.au/">The Australian National University</a>, Australia | 2015 - 2019</strong></p>
                 </div>
                 <div class="education-item">
                     <h3>Bachelor's Degree in Electronic Engineering</h3>
-                    <p><a href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, China | 2011 - 2015</p>
+                    <p><strong><a href="https://www.tsinghua.edu.cn/">Tsinghua University</a>, China | 2011 - 2015</strong></p>
                 </div>
             </section>
 
             <section id="employment" class="section">
                 <h2>Employment</h2>
                 <div class="employment-card">
-                    <h3><a href="https://www.bytedance.com/en/">ByteDance</a></h3>
-                    <p>Senior Research Engineer and Techlead, Security Department | 2020 - Present</p>
+                    <h3>Senior Research Engineer and Tech Lead</h3>
+                    <p><strong>Security Department, <a href="https://www.bytedance.com/en/">ByteDance</a> | 2020 - Present</strong></p>
                     <p>Lead LLM and LLM Agent security, secure machine learning infrastructures initiatives. Plan technical direction and drive business collaborations. Technical system design and key component implementation. Oversee system deployment and ensure product shipment.</p>
                 </div>
                 <div class="employment-card">
-                    <h3><a href="https://www.tencent.com/en-us/">Tencent</a></h3>
-                    <p>Senior Application Researcher, Tencent Cloud | 2019 - 2020</p>
+                    <h3>Senior Software Engineer</h3>
+                    <p><strong>Tencent Cloud, <a href="https://www.tencent.com/en-us/">Tencent</a> | 2019 - 2020</strong></p>
                     <p>Led R&D of Tencent Cloud's privacy computing algorithm system, using AI and cryptography to enable secure cross-domain data services.</p>
                 </div>
             </section>
@@ -340,64 +345,52 @@
                 <h2>Experience</h2>
 
                 <h3>LLM Agent Security Project | 2024.9 - Present</h3>
-                <p><strong>Role</strong> Technical Lead (Team Size: < 10 people)</p>
+                <p><strong>Role</strong> Technical Lead (Team Size < 10 people)</p>
                 <p><strong>Background</strong> Addressing the increased security risks of LLM Agent caused by its complex architecture, interaction mechanisms, and characteristics like untrusted environment interaction and ambiguous information boundaries, which expand the system's attack surface.</p>
-                <p><strong>Key Achievement</strong></p>
-                <li>Launched the AgentArmor protection product v1.X, achieving X0% TPR @ 0.X% FPR in international authoritative benchmark tests, with a significantly lower impact on LLM Agent function utility compared to current academic SOTA solutions.</li>
-                <li>Made breakthroughs in applying program analysis and information flow control technologies to LLM Agent security protection.</li>
-                <li>Included in a company's LLM Agent cloud ecosystem as a key security projects and obtained formal promotion opportunities.</li>
+                <p><strong>Key Achievement</strong> Launched AgentArmor protection product, made security tech breakthroughs, and gained cloud ecosystem promotion.</p>
 
                 <h3>LLM Security Project | 2023.12 - 2024.12</h3>
-                <p><strong>Role</strong> Technical Lead (Team Size: < 10 people)</p>
+                <p><strong>Role</strong> Technical Lead (Team Size < 10 people)</p>
                 <p><strong>Background</strong> Mitigating multiple security risks faced by LLM in model training, parameter fine-tuning, and inference applications, such as prompt attacks, sensitive information leakage, and model hallucinations, which threaten business system security compliance and stable operation.</p>
-                <p><strong>Key Achievement</strong></p>
-                <li>Developed a large model firewall product system, including online strategy, active learning, and security operation systems, providing one-stop security protection with excellent performance (X0% TPR @ 0.X% FPR), high efficiency (1X0ms @ P99 response speed), and adaptability to multi-scenario and multi-modal applications.</li>
-                <li>Achieved technical breakthroughs in model hallucination detection based on AI interpretability, face editing and synthesis, and parallel replacement desensitization.</li>
-                <li>Completed the 0-100 process from technical verification to large-scale application, supporting over X0 internal business scenarios with daily calls exceeding X0000K+ and converting over X0 ToB clients in commercialization.</li>
+                <p><strong>Key Achievement</strong> Developed a large model firewall product system, achieved AI interpretability breakthroughs, and completed commercialization from 0-100.</p>
 
-                <h3>Privacy-Computing-Driven Data Sharing | 2020.12 - Present</h3>
-                <p><strong>Role</strong> Technical Lead (Team Size: < 15 people)</p>
-                <p><strong>Background</strong> Responding to the balance between privacy and utility in the marketization of data elements, meeting the significant demand for secure circulation and sharing of highly sensitive and valuable user data among internal downstream business departments and external cooperation institutions in scenarios such as new customer recommendation, precision marketing, and account risk control.</p>
-                <p><strong>Key Achievement</strong></p>
-                            <li>Internally, covered over X00 business scenarios, involved X0+ business lines, completed over X00 effective risk reduction and compliance work orders, achieved X0% coverage of privacy computing technology in "risk reduction work orders", optimized processes (reduced X approval links), strengthened compliance (technical verification meets privacy regulations), and improved data circulation efficiency.</li>
-                            <li>Externally, delivered over X00 ToB projects with an annual revenue of XXX million.</li>
-                    <li>
-                        Developed cloud-native privacy platform P, supporting BI query and AI tasks with federated learning, MPC, etc. Features high throughput and low latency, e.g., 10B data intersection in X0 mins, 100ms federated call.</li>
-                    <li>
-                        Innovated in cross-domain synthetic data, federated large model finetuning, user group insights, asynchronous federated DL, and cloud-native systems.</li>
-                    </li>
+                <h3>Privacy-Computing-Driven Data Sharing Project | 2020.12 - Present</h3>
+                <p><strong>Role</strong> Technical Lead (Team Size < 15 people)</p>
+                <p><strong>Background</strong> Responding to the balance between privacy and utility in the marketization of data, meeting the significant demand for secure circulation and sharing of highly sensitive and valuable user data among internal downstream business departments and external cooperation institutions in scenarios such as new customer acquisition, targeted advertising, and financial risk control.</p>
+                <p><strong>Key Achievement</strong> Addressed internal compliance across X00+ business scenarios, delivered X00 external ToB projects, developed high-performance cloud-native privacy platform, and innovated in cross - domain and federated model tech.</p>
+
             </section>
             
             <section id="publication" class="section">
                 <h2>Publication</h2>
                 <div class="publication-card">
                     <h3>SAP: Privacy-Preserving Fine-Tuning on Language Models with Split-and-Privatize Framework</h3>
-                    <p>International Joint Conference on Artificial Intelligence (IJCAI), 2025</p>
-                    <p>The paper proposes the Split-and-Privatize (SAP) framework, which integrates split learning and differential privacy to address privacy leakage risks in Model-as-a-Service (MaaS) based Parameter-Efficient Fine-Tuning (PEFT). It also introduces the Contributing-Token-Identification (CTI) method to balance model utility and privacy. Experiments show that SAP achieves a 65% improvement in empirical privacy with only a 1% degradation in model performance on the Stanford Sentiment Treebank dataset, outperforming state-of-the-art baselines.</p>
+                    <p><strong>International Joint Conference on Artificial Intelligence (IJCAI), 2025</strong></p>
+                    <p>The paper proposes the Split-and-Privatize (SAP) framework, combining split learning and differential privacy to tackle privacy issues in MaaS-based PEFT. It introduces the CTI method for balancing utility and privacy. SAP achieves 65% better empirical privacy with only 1% performance drop on Stanford Sentiment Treebank, outperforming baselines.</p>
                     <p><a href="https://arxiv.org/pdf/2312.15603">Read more</a></p>
                 </div>
                 <div class="publication-card">
                     <h3>HALUPROBE: Understanding and Detecting Hallucinations in Large Language Models Through Internal State Analysis</h3>
-                    <p>arXiv preprint, 2025</p>
-                    <p>The paper introduces HALUPROBE, a framework that systematically extracts internal states from large language model inference to understand and detect hallucinations. It divides the LLM inference process into understanding, query, and generation stages, extracting 8 features to analyze hallucination sources. Experiments show that attention-based features like Lookback Ratio and Attention Entropy effectively distinguish hallucinated outputs, with the Sliced Window token selection strategy achieving up to 87% accuracy on the HaluEval dataset. The framework also explores the impact of RAG on inference and reveals limitations in feature transferability across datasets.</p>
+                    <p><strong>arXiv preprint, 2025</strong></p>
+                    <p>The paper introduces HALUPROBE to extract internal states from LLM inference for hallucination detection. It divides the process into three stages and extracts 8 features to analyze sources. Experiments show attention-based features and Sliced Window strategy achieve 87% accuracy on HaluEval, and the framework explores RAG's impact and feature limitations.</p>
                     <p><a href="https://arxiv.org/pdf/2502.13490">Read more</a></p>
                 </div>
                 <div class="publication-card">
                     <h3>Clique Gossiping</h3>
-                    <p>IEEE/ACM Transactions on Networking, 2019</p>
-                    <p>The paper proposes and investigates a framework for clique gossip protocols. As complete subnetworks, the existence of cliques is ubiquitous in various social, computer, and engineering networks. By clique gossiping, nodes interact with each other along a sequence of cliques. Clique-gossip protocols are defined as arbitrary linear node interactions where node states are vectors evolving as linear dynamical systems. Such protocols become clique-gossip averaging algorithms when node states are scalars under averaging rules. The paper generalizes the classical notion of line graph to capture the essential node interaction structure induced by both the underlying network and the specific clique sequence. It proves a fundamental eigenvalue invariance principle for periodic clique-gossip protocols, which implies that any permutation of the clique sequence leads to the same spectrum for the overall state transition when the generalized line graph contains no cycle. The paper also proves that for a network with n nodes, cliques with smaller sizes determined by factors of n can always be constructed leading to finite-time convergent clique-gossip averaging algorithms, provided n is not a prime number. Additionally, the acceleration effects of clique-gossiping are illustrated via numerical examples.</p>
+                    <p><strong>IEEE/ACM Transactions on Networking, 2019</strong></p>
+                    <p>The paper proposes a framework for clique gossip protocols, common in social, computer, and engineering networks, defining them as linear node interactions with vector states evolving dynamically. </p>
                     <p><a href="https://ieeexplore.ieee.org/document/8906173">Read more</a></p>
                 </div>
                 <div class="publication-card">
                     <h3>Network Flows that Solve Least Squares for Linear Equations</h3>
-                    <p>Automatica, 2020</p>
-                    <p>The paper presents a first-order distributed continuous-time algorithm for computing the least-squares solution to a linear equation over networks. It provides convergence results for fixed graphs when the solution is unique, using a nonintegrable and diminishing step size, and establishes the exact rate of convergence for various step size choices. For non-unique solutions, convergence to one such solution is proved for constantly connected switching graphs with square integrable step size, and for uniformly jointly connected switching graphs under boundedness of system states. Numerical examples validate the results and illustrate the impact of step size on convergence speed.</p>
+                    <p><strong>Automatica, 2020</strong></p>
+                    <p>The paper introduces a first-order distributed continuous-time algorithm for network linear equation least-squares solutions. It offers convergence results for unique solutions in fixed graphs with nonintegrable step sizes and determines convergence rates. </p>
                     <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S000510982030306X">Read more</a></p>
                 </div>
                 <div class="publication-card">
                     <h3>An Arrow-Hurwicz-Uzawa Type Flow as Least Squares Solver for Network Linear Equations</h3>
-                    <p>Automatica, 2019</p>
-                    <p>The paper presents distributed continuous and discrete-time algorithms for solving least squares problems in networked linear equations. It introduces an Arrow-Hurwicz-Uzawa type flow, establishing necessary and sufficient conditions for exponential convergence to the least squares solution. The framework is validated across various graph structures (path, star, ring graphs) and demonstrates surprising performance in switching networks, where high-frequency switching enables approximate solutions even when individual graphs fail. Numerical examples confirm exponential convergence rates under the derived conditions.</p>
+                    <p><strong>Automatica, 2019</strong></p>
+                    <p>The paper presents distributed continuous and discrete-time algorithms for solving least squares problems in networked linear equations. It introduces an Arrow-Hurwicz-Uzawa flow, establishing necessary and sufficient conditions for exponential convergence to the least squares solution.</p>
                     <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0005109818304813">Read more</a></p>
                 </div>
             </section>
