--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         }
 
         nav {
-            margin: 20px 0;
+            margin: 25px 0;
+            margin-bottom: -25px;
             text-align: center;
         }
 
