style(index.html): add margin-bottom to improve paragraph spacing

--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
         <div class="content">
             <section id="about" class="section">
                 <h2>About Me</h2>
-                <p>I am a seasoned security professional with extensive experience in the fields of AI security, data privacy, and privacy-preserving computing. Currently, I serve as a technical lead in the Security Research Department at ByteDance, where I lead initiatives in LLM and LLM Agent security, as well as secure machine learning and big data infrastructures.</p>
+                <p style="margin-bottom: 15px;">I am a seasoned security professional with extensive experience in the fields of AI security, data privacy, and privacy-preserving computing. Currently, I serve as a technical lead in the Security Research Department at ByteDance, where I lead initiatives in LLM and LLM Agent security, as well as secure machine learning and big data infrastructures.</p>
 
-                <p>Throughout my career, I have led numerous key projects, including the development of security countermeasures for LLM Agent and LLM safety and security, and secure machine learning infrastructures. These projects have been widely applied both within the companies I've worked for and in commercial scenarios, covering industries such as finance, automotive, tourism, and government.</p>
+                <p style="margin-bottom: 15px;">Throughout my career, I have led numerous key projects, including the development of security countermeasures for LLM Agent and LLM safety and security, and secure machine learning infrastructures. These projects have been widely applied both within the companies I've worked for and in commercial scenarios, covering industries such as finance, automotive, tourism, and government.</p>
 
                 <p>I hold a Ph.D. in Engineering and Computer Science from The Australian National University where my research focused on acceleration and privacy protection in distributed computing, and a Bachelor's degree in Electronic Engineering from Tsinghua University. I have published over 20 academic papers, with representative works in top journals/conferences like IEEE/ACM Trans. on Networking and IJCAI, and hold dozons of patents related to large language models, security and privacy, and AI infra.</p>
             </section>
