docs: update sidebar section titles for accuracy

--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
             <div class="sidebar-section">
                 <h3>Working Direction</h3>
                 <ul>
-                    <li>Generative AI & Machine Learning Learning</li>
+                    <li>Generative AI & Machine Learning</li>
                     <li>Information System Security</li>
                     <li>Privacy & Data Protection</li>
-                    <li>Cloud-Native & Modern Distributed Architecture</li>
+                    <li>Cloud-Native & Modern Distributed System</li>
                 </ul>
             </div>
             <div class="sidebar-section">
