--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 
         .back-to-top {
             position: fixed;
-            bottom: 100px;
-            right: 100px;
+            bottom: 250px;
+            right: 200px;
             background-color: var(--secondary-color);
             color: white;
             width: 50px;
@@ -221,13 +221,17 @@
             align-items: center;
             justify-content: center;
             text-decoration: none;
-            font-size: 1.5rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            transition: background-color 0.3s;
+            font-size: 1.8rem;
+            box-shadow: 0 3px 8px rgba(0,0,0,0.3);
+            transition: all 0.3s;
+            text-align: center;
+            line-height: 1.7;
         }
 
         .back-to-top:hover {
             background-color: var(--primary-color);
+            transform: translateY(-3px);
+            box-shadow: 0 5px 12px rgba(0,0,0,0.3);
         }
 
         .social-links {
@@ -258,6 +262,64 @@
             }
         }
     </style>
+    <style>
+        .right-nav {
+            position: fixed;
+            right: 150px;
+            top: 40%;
+            transform: translateY(-50%);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .right-nav a {
+            background-color: var(--secondary-color);
+            color: white;
+            width: 120px;
+            height: 30px;
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            font-size: 0.9rem;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            transition: background-color 0.3s;
+            text-align: center;
+        }
+        .right-nav a:hover {
+            background-color: var(--primary-color);
+        }
+    </style>
+    <style>
+        .right-nav a.active {
+            background-color: var(--primary-color);
+        }
+    </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const sections = document.querySelectorAll('section');
+            const navLinks = document.querySelectorAll('.right-nav a');
+
+            window.addEventListener('scroll', function() {
+                let current = '';
+                sections.forEach(section => {
+                    const sectionTop = section.offsetTop;
+                    const sectionHeight = section.clientHeight;
+                    if (pageYOffset >= sectionTop - 100) {
+                        current = section.getAttribute('id');
+                    }
+                });
+
+                navLinks.forEach(link => {
+                    link.classList.remove('active');
+                    if (link.getAttribute('href').substring(1) === current) {
+                        link.classList.add('active');
+                    }
+                });
+            });
+        });
+    </script>
 </head>
 <body>
     <header>
@@ -278,6 +340,15 @@
             <a href="#publication">Publication</a>
         </nav>
     </header>
+
+    <nav class="right-nav">
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#employment">Employment</a>
+        <a href="#experience">Experience</a>
+        <a href="#skill">Skill</a>
+        <a href="#publication">Publication</a>
+    </nav>
 
     <main>
         <aside class="sidebar">
@@ -443,5 +514,22 @@
             window.scrollTo({top: 0, behavior: 'smooth'});
         });
     </script>
+<script>
+    window.onscroll = function() {
+        scrollFunction();
+    };
+
+    function scrollFunction() {
+        const backToTop = document.querySelector('.back-to-top');
+        const rightNav = document.querySelector('.right-nav');
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            backToTop.style.display = "block";
+            rightNav.style.display = "flex";
+        } else {
+            backToTop.style.display = "none";
+            rightNav.style.display = "none";
+        }
+    }
+</script>
 </body>
 </html>
