--- a/index.html
+++ b/index.html
@@ -324,7 +324,16 @@
 <body>
     <header>
         <div class="profile-container">
+            <!-- <div class="current-status">
+                <h3 style="color: #0d6efd; font-weight: 600;">LOOKING FOR OPPORTUNITY !!!</h3>
+                <p style="color: #495057; margin-bottom: 8px;"><i><strong>Australian permanent resident</strong>, full working right in Oz</i></p>
+                <p style="color: #495057; margin-bottom: 8px;"><i>Looking for openings in Australia</i></p>
+                <p style="color: #495057; margin-bottom: 8px;"><i>Senior software/security/research engineer, 8+ YoE</i></p>
+                <p style="color: #495057;"><i>Onsite/remote/hybrid</i></p>
+            </div> -->
+
             <div class="profile-photo"></div>
+            
             <div class="profile-info">
                 <h1>Yang Liu</h1>
                 <p>Senior Research Engineer and Tech Lead at <a href="https://www.bytedance.com/en/">ByteDance</a></p>
