--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                 <h3>Contact</h3>
                 <ul>
                     <li>Email: clarkfromthu@gmail.com</li>
+                    <li>WeChat: clarkfromthu</li>
                 </ul>
             </div>
             <div class="sidebar-section">
