docs: update role descriptions in experience section for clarity and accuracy

--- a/index.html
+++ b/index.html
@@ -424,17 +424,17 @@
                 <h2>Experience</h2>
 
                 <h3>LLM Agent Security Project | 2024.9 - Present</h3>
-                <p><strong>Role</strong> Technical Lead (Team Size < 10 people)</p>
+                <p><strong>Role</strong> Technical Lead and Core Developer</p>
                 <p><strong>Background</strong> Addressing the increased security risks of LLM Agent caused by its complex architecture, interaction mechanisms, and characteristics like untrusted environment interaction and ambiguous information boundaries, which expand the system's attack surface.</p>
                 <p><strong>Key Achievement</strong> Launched AgentArmor protection product, made security tech breakthroughs, and gained cloud ecosystem promotion.</p>
 
                 <h3>LLM Security Project | 2023.12 - 2024.12</h3>
-                <p><strong>Role</strong> Technical Lead (Team Size < 10 people)</p>
+                <p><strong>Role</strong> Technical Lead and Core Developer</p>
                 <p><strong>Background</strong> Mitigating multiple security risks faced by LLM in model training, parameter fine-tuning, and inference applications, such as prompt attacks, sensitive information leakage, and model hallucinations, which threaten business system security compliance and stable operation.</p>
                 <p><strong>Key Achievement</strong> Developed a large model firewall product system, achieved AI interpretability breakthroughs, and completed commercialization from 0-100.</p>
 
                 <h3>Privacy-Computing-Driven Data Sharing Project | 2020.12 - Present</h3>
-                <p><strong>Role</strong> Technical Lead (Team Size < 15 people)</p>
+                <p><strong>Role</strong> Technical Lead and Core Developer</p>
                 <p><strong>Background</strong> Responding to the balance between privacy and utility in the marketization of data, meeting the significant demand for secure circulation and sharing of highly sensitive and valuable user data among internal downstream business departments and external cooperation institutions in scenarios such as new customer acquisition, targeted advertising, and financial risk control.</p>
                 <p><strong>Key Achievement</strong> Addressed internal compliance across X00+ business scenarios, delivered X00 external ToB projects, developed high-performance cloud-native privacy platform, and innovated in cross - domain and federated model tech.</p>
 
