--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             --border-color: #ddd;
         }
 
+        a:link, a:visited {
+            color: #0e0235;
+            text-decoration: underline;
+        }
+
         * {
             margin: 0;
             padding: 0;
