style(index.html): enhance navigation link visibility with updated colors and text decoration

--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@
             </div>
         </div>
         <nav>
-            <a href="#about">About</a>
-            <a href="#education">Education</a>
-            <a href="#employment">Employment</a>
-            <a href="#experience">Experience</a>
-            <a href="#skill">Skill</a>
-            <a href="#publication">Publication</a>
+            <a href="#about" style="color: rgba(8, 76, 128, 0.86); text-decoration: none;">About</a>
+            <a href="#education" style="color: rgba(8, 76, 128, 0.86); text-decoration: none;">Education</a>
+            <a href="#employment" style="color: rgba(8, 76, 128, 0.86); text-decoration: none;">Employment</a>
+            <a href="#experience" style="color: rgba(8, 76, 128, 0.86); text-decoration: none;">Experience</a>
+            <a href="#skill" style="color: rgba(8, 76, 128, 0.86); text-decoration: none;">Skill</a>
+            <a href="#publication" style="color: rgba(8, 76, 128, 0.86); text-decoration: none;">Publication</a>
         </nav>
     </header>
 
