style: improve back-to-top button visibility with white color

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     <footer>
         <p>&copy; 2025 Yang Liu. All rights reserved.</p>
     </footer>
-    <a href="#top" class="back-to-top" id="backToTop">&uarr;</a>
+    <a href="#top" class="back-to-top" id="backToTop" style="color: white; text-decoration: none;">&uarr;</a>
 
     <script>
         // Back to top button functionality
