docs: reorder privacy skills list for better readability

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 <div class="skill-item"> 
                     <h3>Privacy & Data Protection</h3> 
                     <p>
-                    Data Masking, Anonymization, Pseudonymization, Data Encryption, Privacy by Design, Data Minimization, Data Governance,                                         Differential Privacy, Homomorphic Encryption, Secure Multi-Party Computation, Federated Learning & Analytics, Privacy-Preserving Machine Learning.
+                    Differential Privacy, Homomorphic Encryption, Secure Multi-Party Computation, Federated Learning & Analytics, Privacy-Preserving Machine Learning, Data Masking, Anonymization, Pseudonymization, Data Encryption, Privacy by Design, Data Minimization, Data Governance
                     </p>
                 </div> 
                 <div class="skill-item"> 
