docs: add AGENTARMOR publication to index.html

--- a/index.html
+++ b/index.html
@@ -478,6 +478,12 @@
             <section id="publication" class="section">
                 <h2>Publication</h2>
                 <div class="publication-card">
+                    <h3>AGENTARMOR: Enforcing Program Analysis on Agent Runtime Trace to Defend Against Prompt Injection</h3>
+                    <p><strong>arXiv preprint, 2025</strong></p>
+                    <p>The paper presents AGENTARMOR, a program analysis framework that treats LLM agent runtime traces as structured programs to defend against prompt injection attacks. It converts traces into graph-based intermediate representations (CFG, DFG, PDG) via a graph constructor, enriches them with metadata through a property registry, and enforces security policies using a type system. Evaluated on AgentDojo, it achieves 95.75% TPR and 3.66% FPR, reducing attack success rate to 1.16% with only 6.7% utility loss, outperforming heuristic defenses.</p>
+                    <p><a href="https://arxiv.org/pdf/2508.01249">Read more</a></p>
+                </div>
+                <div class="publication-card">
                     <h3>SAP: Privacy-Preserving Fine-Tuning on Language Models with Split-and-Privatize Framework</h3>
                     <p><strong>International Joint Conference on Artificial Intelligence (IJCAI), 2025</strong></p>
                     <p>The paper proposes the Split-and-Privatize (SAP) framework, combining split learning and differential privacy to tackle privacy issues in MaaS-based PEFT. It introduces the CTI method for balancing utility and privacy. SAP achieves 65% better empirical privacy with only 1% performance drop on Stanford Sentiment Treebank, outperforming baselines.</p>
