docs: fix typo in publication title (AGENTARMOR -> AgentArmor)

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                 <div class="publication-card">
                     <h3>AGENTARMOR: Enforcing Program Analysis on Agent Runtime Trace to Defend Against Prompt Injection</h3>
                     <p><strong>arXiv preprint, 2025</strong></p>
-                    <p>The paper presents AGENTARMOR, a program analysis framework that treats LLM agent runtime traces as structured programs to defend against prompt injection attacks. It converts traces into graph-based intermediate representations (CFG, DFG, PDG) via a graph constructor, enriches them with metadata through a property registry, and enforces security policies using a type system. Evaluated on AgentDojo, it achieves 95.75% TPR and 3.66% FPR, reducing attack success rate to 1.16% with only 6.7% utility loss, outperforming heuristic defenses.</p>
+                    <p>The paper presents AgentArmor, a program analysis framework that treats LLM agent runtime traces as structured programs to defend against prompt injection attacks. It converts traces into graph-based intermediate representations (CFG, DFG, PDG) via a graph constructor, enriches them with metadata through a property registry, and enforces security policies using a type system. Evaluated on AgentDojo, it achieves 95.75% TPR and 3.66% FPR, reducing attack success rate to 1.16% with only 6.7% utility loss, outperforming heuristic defenses.</p>
                     <p><a href="https://arxiv.org/pdf/2508.01249">Read more</a></p>
                 </div>
                 <div class="publication-card">
