docs: reorder LinkedIn and Google Scholar links for consistency

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <div class="profile-info">
                 <h1>Yang Liu</h1>
                 <p>Senior Research Engineer and Tech Lead at <a href="https://www.bytedance.com/en/">ByteDance</a></p>
-                <p><a href="https://www.linkedin.com/in/yang-liu-from-thu/">LinkedIn</a> | <a href="https://scholar.google.com/citations?user=T7tUkdgAAAAJ&hl=en">Google Scholar</a></p>
+                <p><a href="https://scholar.google.com/citations?user=T7tUkdgAAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/yang-liu-from-thu/">LinkedIn</a></p>
             </div>
         </div>
         <nav>
