docs: update publication link for SAP paper to the official IJCAI preprint

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                     <h3>SAP: Privacy-Preserving Fine-Tuning on Language Models with Split-and-Privatize Framework</h3>
                     <p><strong>International Joint Conference on Artificial Intelligence (IJCAI), 2025</strong></p>
                     <p>The paper proposes the Split-and-Privatize (SAP) framework, combining split learning and differential privacy to tackle privacy issues in MaaS-based PEFT. It introduces the CTI method for balancing utility and privacy. SAP achieves 65% better empirical privacy with only 1% performance drop on Stanford Sentiment Treebank, outperforming baselines.</p>
-                    <p><a href="https://arxiv.org/pdf/2312.15603">Read more</a></p>
+                    <p><a href="https://ijcai-preprints.s3.us-west-1.amazonaws.com/2025/6026.pdf">Read more</a></p>
                 </div>
                 <div class="publication-card">
                     <h3>HALUPROBE: Understanding and Detecting Hallucinations in Large Language Models Through Internal State Analysis</h3>
